--- a/concierge-agent-api/appsettings.Development.json
+++ b/concierge-agent-api/appsettings.Development.json
@@ -10,5 +10,10 @@
     "ContainerName": "",
     "AccountUri": "",
     "TenantId": ""
+  },
+  "DataBricksOptions": {
+    "WorkspaceUrl": "",
+    "Token": "",
+    "WarehouseId": ""
   }
 }
