--- a/concierge-agent-api/appsettings.json
+++ b/concierge-agent-api/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CosmosDbOptions": {
+    "DatabaseName": "",
+    "ContainerName": "",
+    "AccountUri": "",
+    "TenantId": ""
+  },
+  "DataBricksOptions": {
+    "WorkspaceUrl": "",
+    "Token": "",
+    "WarehouseId": ""
+  }
 }
