renamed a few things

--- a/concierge-agent-api/appsettings.json
+++ b/concierge-agent-api/appsettings.json
@@ -12,7 +12,7 @@
     "AccountUri": "",
     "TenantId": ""
   },
-  "DataBricksOptions": {
+  "DatabricksOptions": {
     "WorkspaceUrl": "",
     "Token": "",
     "WarehouseId": ""
