--- a/concierge-agent-api/appsettings.Development.json
+++ b/concierge-agent-api/appsettings.Development.json
@@ -12,7 +12,7 @@
     "TenantId": ""
   },
   "DatabricksOptions": {
-    "WorkspaceUrl": "",
+    "DatabricksInstance": "",
     "Token": "",
     "WarehouseId": ""
   }
