--- a/concierge-agent-api/appsettings.json
+++ b/concierge-agent-api/appsettings.json
@@ -13,7 +13,7 @@
     "TenantId": ""
   },
   "DatabricksOptions": {
-    "WorkspaceUrl": "",
+    "DatabricksInstance": "",
     "Token": "",
     "WarehouseId": ""
   }
