added azure storage options

--- a/concierge-agent-api/appsettings.Development.json
+++ b/concierge-agent-api/appsettings.Development.json
@@ -15,5 +15,9 @@
     "DatabricksInstance": "",
     "Token": "",
     "WarehouseId": ""
+  },
+  "AzureStorageOptions": {
+    "ConnectionString": "",
+    "QueueName": ""
   }
 }
