--- a/concierge-agent-api/appsettings.json
+++ b/concierge-agent-api/appsettings.json
@@ -16,5 +16,9 @@
     "DatabricksInstance": "",
     "Token": "",
     "WarehouseId": ""
+  },
+  "AzureStorageOptions": {
+    "ConnectionString": "",
+    "QueueName": ""
   }
 }
