--- a/concierge-agent-api/appsettings.Development.json
+++ b/concierge-agent-api/appsettings.Development.json
@@ -19,5 +19,10 @@
   "AzureStorageOptions": {
     "ConnectionString": "",
     "QueueName": ""
+  },
+  "AzureOpenAiOptions": {
+    "DeploymentName": "gpt-4o",
+    "EndPoint": "",
+    "ApiKey": ""
   }
 }
