--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,4 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 /concierge-agent-api/appsettings.Local.json
+/concierge-agent-api/appsettings.Development.json
