scaffolding for events

--- a/concierge-agent-api/appsettings.json
+++ b/concierge-agent-api/appsettings.json
@@ -18,8 +18,9 @@
     "WarehouseId": ""
   },
   "AzureStorageOptions": {
-    "ConnectionString": "",
-    "QueueName": ""
+    "QueueConnectionString": "",
+    "QueueName": "",
+    "StorageConnectionString": ""
   },
   "AzureOpenAiOptions": {
     "DeploymentName": "gpt-4o",
