--- a/concierge-agent-api/appsettings.Development.json
+++ b/concierge-agent-api/appsettings.Development.json
@@ -17,8 +17,9 @@
     "WarehouseId": ""
   },
   "AzureStorageOptions": {
-    "ConnectionString": "",
-    "QueueName": ""
+    "QueueConnectionString": "",
+    "QueueName": "",
+    "StorageConnectionString": ""
   },
   "AzureOpenAiOptions": {
     "DeploymentName": "gpt-4o",
