Updating regex to handle event id and ignoring created .txt in the trigger

--- a/EventFunction/EventFunction.csproj
+++ b/EventFunction/EventFunction.csproj
@@ -9,6 +9,9 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="local.settings.json" />
+  </ItemGroup>
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="itext7" Version="9.0.0" />
     <!-- Application Insights isn't enabled by default. See https://aka.ms/AAt8mw4. -->
